--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,15 @@
     <title>eikon parcel starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@400;700&family=Figtree:ital,wght@0,300..900;1,300..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sorts+Mill+Goudy:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello exercice</h1>
+    <h1>How to make the perfect morning coffee, according to the Science</h1>
 
     <script src="js/main.js" type="module"></script>
   </body>
