--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,11 @@
     />
   </head>
   <body>
-    <h1>How to make the perfect morning coffee, according to the Science</h1>
-
+    <div>
+      <h1>How to make the perfect morning coffee, according to the Science</h1>
+      <p>Tara Gibson</p>
+      <p class="date">Jul 13, 2024</p>
+    </div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
