--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <body>
     <div>
       <h1>How to make the perfect morning coffee, according to the Science</h1>
+      <img src="/src/img/9b85824ece6472715c44217c8045d8f3441e1909.jpg" alt="" />
       <p>Tara Gibson</p>
       <p class="date">Jul 13, 2024</p>
     </div>
