intégration de la card

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,15 @@
     />
   </head>
   <body>
-    <div>
+    <div class="card">
+      <img class="coffee" alt="" />
       <h1>How to make the perfect morning coffee, according to the Science</h1>
+
       <img src="/src/img/9b85824ece6472715c44217c8045d8f3441e1909.jpg" alt="" />
-      <p>Tara Gibson</p>
-      <p class="date">Jul 13, 2024</p>
+      <div class="author">
+        <p>Tara Gibson</p>
+        <p class="date">Jul 13, 2024</p>
+      </div>
     </div>
     <script src="js/main.js" type="module"></script>
   </body>
