dévellopement de author

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,19 @@
   </head>
   <body>
     <div class="card">
-      <img class="coffee" alt="" />
+      <img
+        class="coffee"
+        src="/src/img/d48436d2265faf2406aa0eab905563be54a303cb.png"
+        alt=""
+      />
       <h1>How to make the perfect morning coffee, according to the Science</h1>
 
-      <img src="/src/img/9b85824ece6472715c44217c8045d8f3441e1909.jpg" alt="" />
       <div class="author">
+        <img
+          class="profile"
+          src="/src/img/9b85824ece6472715c44217c8045d8f3441e1909.jpg"
+          alt=""
+        />
         <p>Tara Gibson</p>
         <p class="date">Jul 13, 2024</p>
       </div>
