--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,10 @@
           src="/src/img/9b85824ece6472715c44217c8045d8f3441e1909.jpg"
           alt=""
         />
-        <p>Tara Gibson</p>
-        <p class="date">Jul 13, 2024</p>
+        <div class="text">
+          <p>Tara Gibson</p>
+          <p class="date">Jul 13, 2024</p>
+        </div>
       </div>
     </div>
     <script src="js/main.js" type="module"></script>
